services/zot/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: zot
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zot
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zot-ingress
  namespace: zot
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: zot
      app.kubernetes.io/instance: zot
      app.kubernetes.io/name: zot
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
